@@ -1,5 +1,12 @@
-Changelog for V2.0.0 -->
+Changelog: for V2.0.0 -->
 
+Changes: in Development Version 2.0.0 (06/20/2022)
+
+1. Added Admin Login Page
+2. Added Admin Dashboard (Delete Reported Post, Shut Down Server)
+3. Added API for pybin tools
+4. Added Report Post
+5. Fixed Other Various Bugs & Changed some Code to make it more efficient
 
 Changes: in Development Version 2.0.0 (06/19/2022)
 
